<resources>
    <string name="app_name">Share a Meal</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="noAccount">Without an account</string>
    <string name="eventName">Name</string>
    <string name="eventStartDate">Date</string>
    <string name="eventTime">Time</string>
    <string name="eventActive">Is active</string>
    <string name="eventDescription">Description</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="eventEdition">Event Edit</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="new_event">New</string>
    <string name="add_bdd_ok">Add succefully</string>
    <string name="add_bdd_nok">Add failed</string>
    <string name="error">An error has occurred</string>
    <string name="connectFailed">Connection failed, try again</string>
    <string name="connecting">Connecting ...</string>
    <string name="badUser_pass">Bad username or password</string>
    <string name="somethingWrong">Something went wrong</string>
    <string name="emptyUsername">Username is empty</string>
    <string name="emptyPassword">Password is empty</string>
    <string name="emptyUsername_Password">Username and Password are empty</string>
    <string name="loading">Loading....</string>
    <string name="noValue">No events in your association</string>
    <string name="city">City</string>
    <string name="noCity">No city configured</string>
    <string name="addSuccesfully">Add successfully</string>
    <string name="modifSuccesfully">Modification successfully</string>
    <string name="removeFilter">Remove filter</string>
    <string name="association">Association</string>
    <string name="validate">Validate</string>
    <string name="organizedBy">Organized by :</string>
</resources>
