<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="5dp"
    android:paddingRight="20dp"
    android:gravity="center">


    <EditText
        android:id="@+id/one_event_for_edit_eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/one_event_for_edit_eventStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/eventStartDate" />

        <TextView
            android:id="@+id/one_event_for_edit_eventStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/eventTime" />
    </LinearLayout>

    <Switch
        android:id="@+id/one_event_for_edit_eventActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventActive" />

    <EditText
        android:id="@+id/one_event_for_edit_eventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventDescription" />

    <EditText
        android:id="@+id/one_event_for_edit_eventCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one_event_for_edit_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/one_event_for_edit_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>