<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="5dp"
    android:paddingRight="20dp"
    android:gravity="center">


    <TextView
        android:id="@+id/one_event_for_consult_eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/one_event_for_consult_eventStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/eventStartDate" />

        <TextView
            android:id="@+id/one_event_for_consult_eventStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/eventTime" />
    </LinearLayout>

    <Switch
        android:id="@+id/one_event_for_consult_eventActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventActive" />

    <TextView
        android:id="@+id/one_event_for_consult_eventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventDescription" />

    <TextView
        android:id="@+id/one_event_for_consult_eventCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city" />


        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/one_event_for_consult_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

</LinearLayout>