<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="40dp"
    android:paddingRight="40dp">

    <EditText
        android:id="@+id/main_activity_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="left"
        android:inputType="textPersonName"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/main_activity_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/main_activity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/main_activity_noAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noAccount" />

</LinearLayout>